# realm.hpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
bench/: CMakeLists.txt  simple_bench.cpp  simple_bench_fetch.cpp  simple_bench_func.cpp
bench/util/: components.hpp  timer.hpp
include/: pillar.hpp  realm.hpp
include/core/: archetype.hpp  chunk_view.hpp  component.hpp  concepts.hpp  entity.hpp  query.hpp  robin_hood.hpp  scheduler.hpp  system.hpp  view.hpp  world.hpp
include/detail/: swap_remove.hpp  type_meta.hpp  type_traits.hpp
include/internal/: swap_remove.hpp  type_meta.hpp  type_traits.hpp
include/pillar/: archetype.hpp  component.hpp  entity.hpp  meta.hpp  util.hpp
include/realm/: archetype.hpp  component.hpp  concept.hpp  entity.hpp  meta.hpp  query.hpp  realm.hpp  system.hpp  traits.hpp  util.hpp  world.hpp
include/realm/core/: archetype.hpp  component.hpp  entity.hpp  query.hpp  scheduler.hpp  system.hpp  types.hpp  view.hpp  world.hpp
include/realm/util/: identifier.hpp  swap_remove.hpp  tuple_util.hpp  type_traits.hpp
include/util/: clean_query.hpp  identifier.hpp  swap_remove.hpp  tuple_util.hpp  type_hash.hpp  type_traits.hpp
test/: CMakeLists.txt  catch.cpp  entity-tests.cpp  entity.cpp  entity_tests.cpp  example_test.cpp  main.cpp  query.cpp  query_tests.cpp  scheduler-tests.cpp  scheduler_tests.cpp  singleton_tests.cpp  system-tests.cpp  system.cpp  system_tests.cpp  test.cpp
test/util/: catch.cpp  catch.hpp  components.hpp
test/utils/: components.hpp
